--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
   },
   "author": "Carl Barrdahl <carlbarrdahl@gmail.com>",
   "license": "MIT",
-
   "devDependencies": {
-    "merge": "^1.2.0",
-    "moment": "^2.8.3",
     "browser-sync": "^1.5.2",
     "browserify": "^5.12.1",
     "del": "^0.1.3",
@@ -22,10 +19,13 @@
     "gulp-browserify": "^0.5.0",
     "gulp-changed": "^1.0.0",
     "gulp-csso": "^0.2.9",
+    "gulp-gh-pages": "^0.4.0",
     "gulp-notify": "^2.0.0",
     "gulp-sass": "^1.0.0",
     "gulp-stylus": "^1.3.3",
     "gulp-uglify": "^1.0.1",
+    "merge": "^1.2.0",
+    "moment": "^2.8.3",
     "react": "^0.11.2",
     "react-router": "^0.8.0",
     "reactify": "^0.14.0",
