--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "merge": "^1.2.0",
     "moment": "^2.8.3",
     "react": "^0.11.2",
+    "react-inlinesvg": "^0.2.3",
     "react-router": "^0.8.0",
     "reactify": "^0.14.0",
     "stylus": "^0.49.1",
