--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "devDependencies": {
     "browser-sync": "^1.5.2",
     "browserify": "^5.12.1",
-    "data-collection": "^1.1.5",
     "del": "^0.1.3",
     "es6-promise": "^1.0.0",
     "flux": "^2.0.1",
@@ -25,12 +24,14 @@
     "gulp-sass": "^1.0.0",
     "gulp-stylus": "^1.3.3",
     "gulp-uglify": "^1.0.1",
+    "jest-cli": "^0.1.18",
     "merge": "^1.2.0",
     "moment": "^2.8.3",
     "react": "^0.11.2",
     "react-inlinesvg": "^0.2.3",
     "react-router": "^0.8.0",
     "reactify": "^0.14.0",
+    "reflux": "^0.1.13",
     "stylus": "^0.49.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
