--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "merge": "^1.2.0",
     "moment": "^2.8.3",
     "omniscient": "^1.1.0",
-    "react": "^0.11.2",
+    "react": "^0.12.0-rc1",
     "react-inlinesvg": "^0.2.3",
     "react-router": "^0.8.0",
     "reactify": "^0.14.0",
